// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/tooltip/demo/arrow.tsx extend context correctly 1`] = `
Array [
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="g-segmented css-var-test-id"
    role="radiogroup"
    style="margin-bottom: 24px;"
    tabindex="0"
  >
    <div
      class="g-segmented-group"
    >
      <label
        class="g-segmented-item g-segmented-item-selected"
      >
        <input
          checked=""
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="Show"
        >
          Show
        </div>
      </label>
      <label
        class="g-segmented-item"
      >
        <input
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="Hide"
        >
          Hide
        </div>
      </label>
      <label
        class="g-segmented-item"
      >
        <input
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="Center"
        >
          Center
        </div>
      </label>
    </div>
  </div>,
  <div
    class="demo g-flex css-var-test-id g-flex-align-center g-flex-justify-center g-flex-vertical"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="white-space: nowrap;"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          TL
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-topLeft"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          Top
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          TR
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-topRight"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
    </div>
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-space-between"
      style="width: 432px;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
      >
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            LT
          </span>
        </button>
        <div
          class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-leftTop"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-tooltip-arrow"
            style="position: absolute;"
          >
            <span
              class="g-tooltip-arrow-content"
            />
          </div>
          <div
            class="g-tooltip-container"
            id="test-id"
            role="tooltip"
          >
            <span>
              prompt text
            </span>
          </div>
        </div>
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            Left
          </span>
        </button>
        <div
          class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-left"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-tooltip-arrow"
            style="position: absolute; top: 0px; right: 0px;"
          >
            <span
              class="g-tooltip-arrow-content"
            />
          </div>
          <div
            class="g-tooltip-container"
            id="test-id"
            role="tooltip"
          >
            <span>
              prompt text
            </span>
          </div>
        </div>
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            LB
          </span>
        </button>
        <div
          class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-leftBottom"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-tooltip-arrow"
            style="position: absolute;"
          >
            <span
              class="g-tooltip-arrow-content"
            />
          </div>
          <div
            class="g-tooltip-container"
            id="test-id"
            role="tooltip"
          >
            <span>
              prompt text
            </span>
          </div>
        </div>
      </div>
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
      >
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            RT
          </span>
        </button>
        <div
          class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-rightTop"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-tooltip-arrow"
            style="position: absolute;"
          >
            <span
              class="g-tooltip-arrow-content"
            />
          </div>
          <div
            class="g-tooltip-container"
            id="test-id"
            role="tooltip"
          >
            <span>
              prompt text
            </span>
          </div>
        </div>
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            Right
          </span>
        </button>
        <div
          class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-right"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-tooltip-arrow"
            style="position: absolute; top: 0px; left: 0px;"
          >
            <span
              class="g-tooltip-arrow-content"
            />
          </div>
          <div
            class="g-tooltip-container"
            id="test-id"
            role="tooltip"
          >
            <span>
              prompt text
            </span>
          </div>
        </div>
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            RB
          </span>
        </button>
        <div
          class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-rightBottom"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-tooltip-arrow"
            style="position: absolute;"
          >
            <span
              class="g-tooltip-arrow-content"
            />
          </div>
          <div
            class="g-tooltip-container"
            id="test-id"
            role="tooltip"
          >
            <span>
              prompt text
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="white-space: nowrap;"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          BL
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-bottomLeft"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          Bottom
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-bottom"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          BR
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-bottomRight"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/tooltip/demo/arrow.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/arrow-point-at-center.tsx extend context correctly 1`] = `
<div
  class="g-space g-space-vertical g-space-gap-row-small g-space-gap-col-small css-var-test-id"
>
  <div
    class="g-space-item"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      type="button"
    >
      <span>
        Align edge / 边缘对齐
      </span>
    </button>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-topLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        Prompt Text
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      type="button"
    >
      <span>
        Arrow points to center / 箭头指向中心
      </span>
    </button>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-topLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        Prompt Text
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/tooltip/demo/arrow-point-at-center.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/auto-adjust-overflow.tsx extend context correctly 1`] = `
<div
  style="display: flex; flex-direction: column; row-gap: 16px;"
>
  <h5
    class="g-typography css-var-test-id"
  >
    With \`getPopupContainer\`
  </h5>
  <div
    style="overflow: auto; position: relative; padding: 24px; border: 1px solid rgb(233, 233, 233);"
  >
    <div
      style="width: 200%; display: flex; flex-direction: column; align-items: center; row-gap: 16px;"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          Adjust automatically / 自动调整
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-left"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; top: 0px; right: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          Prompt Text
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          Ignore / 不处理
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-left"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; top: 0px; right: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          Prompt Text
        </div>
      </div>
    </div>
  </div>
  <h5
    class="g-typography css-var-test-id"
  >
    Without \`getPopupContainer\`
  </h5>
  <div
    style="overflow: auto; position: relative; padding: 24px; border: 1px solid rgb(233, 233, 233);"
  >
    <div
      style="width: 200%; display: flex; flex-direction: column; align-items: center; row-gap: 16px;"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          Adjust automatically / 自动调整
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-left"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; top: 0px; right: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          Prompt Text
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          Ignore / 不处理
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-left"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; top: 0px; right: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          Prompt Text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/tooltip/demo/auto-adjust-overflow.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/basic.tsx extend context correctly 1`] = `
Array [
  <span
    aria-describedby="test-id"
  >
    Tooltip will show on mouse enter.
  </span>,
  <div
    class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-tooltip-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-tooltip-arrow-content"
      />
    </div>
    <div
      class="g-tooltip-container"
      id="test-id"
      role="tooltip"
    >
      prompt text
    </div>
  </div>,
]
`;

exports[`renders components/tooltip/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/colorful.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-with-text g-divider-with-text-start"
    role="separator"
  >
    <div
      class="g-divider-rail g-divider-rail-start"
    />
    <span
      class="g-divider-inner-text"
    >
      Presets
    </span>
    <div
      class="g-divider-rail g-divider-rail-end"
    />
  </div>,
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    style="flex-wrap: wrap;"
  >
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          pink
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-pink g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          red
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-red g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          yellow
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-yellow g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          orange
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-orange g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          cyan
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-cyan g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          green
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-green g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          blue
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-blue g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          purple
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-purple g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          geekblue
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-geekblue g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          magenta
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-magenta g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          volcano
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-volcano g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          gold
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-gold g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          lime
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-lime g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          prompt text
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-with-text g-divider-with-text-start"
    role="separator"
  >
    <div
      class="g-divider-rail g-divider-rail-start"
    />
    <span
      class="g-divider-inner-text"
    >
      Custom
    </span>
    <div
      class="g-divider-rail g-divider-rail-end"
    />
  </div>,
  <div
    class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    style="flex-wrap: wrap;"
  >
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          #f50
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; --g-tooltip-arrow-background-color: #f50;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
          style="background: rgb(255, 85, 0); --g-tooltip-overlay-color: #FFF;"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          #2db7f5
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; --g-tooltip-arrow-background-color: #2db7f5;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
          style="background: rgb(45, 183, 245); --g-tooltip-overlay-color: #000;"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          #87d068
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; --g-tooltip-arrow-background-color: #87d068;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
          style="background: rgb(135, 208, 104); --g-tooltip-overlay-color: #000;"
        >
          prompt text
        </div>
      </div>
    </div>
    <div
      class="g-space-item"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        type="button"
      >
        <span>
          #108ee9
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; --g-tooltip-arrow-background-color: #108ee9;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
          style="background: rgb(16, 142, 233); --g-tooltip-overlay-color: #FFF;"
        >
          prompt text
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/tooltip/demo/colorful.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/destroy-on-close.tsx extend context correctly 1`] = `
Array [
  <span
    aria-describedby="test-id"
  >
    Dom will destroyed when Tooltip close
  </span>,
  <div
    class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-tooltip-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-tooltip-arrow-content"
      />
    </div>
    <div
      class="g-tooltip-container"
      id="test-id"
      role="tooltip"
    >
      prompt text
    </div>
  </div>,
]
`;

exports[`renders components/tooltip/demo/destroy-on-close.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/disabled.tsx extend context correctly 1`] = `
Array [
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
    type="button"
  >
    <span>
      Enable
    </span>
  </button>,
  <div
    class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-tooltip-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-tooltip-arrow-content"
      />
    </div>
    <div
      class="g-tooltip-container"
      id="test-id"
      role="tooltip"
    />
  </div>,
]
`;

exports[`renders components/tooltip/demo/disabled.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/disabled-children.tsx extend context correctly 1`] = `
<div
  class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
>
  <div
    class="g-space-item"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      disabled=""
      type="button"
    >
      <span>
        Disabled
      </span>
    </button>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        Thanks for using antd. Have a nice day !
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <input
      aria-describedby="test-id"
      class="g-input g-input-disabled g-input-outlined css-var-test-id g-input-css-var"
      disabled=""
      placeholder="disabled"
      type="text"
      value=""
    />
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        Thanks for using antd. Have a nice day !
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-input-number g-input-number-mode-input css-var-test-id g-input-number-css-var g-input-number-outlined g-input-number-without-controls g-input-number-disabled"
    >
      <input
        aria-describedby="test-id"
        autocomplete="off"
        class="g-input-number-input"
        disabled=""
        role="spinbutton"
        step="1"
        value=""
      />
    </div>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        Thanks for using antd. Have a nice day !
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <label
      class="g-checkbox-wrapper g-checkbox-wrapper-disabled css-var-test-id g-checkbox-css-var"
    >
      <span
        class="g-checkbox g-wave-target g-checkbox-disabled"
      >
        <input
          aria-describedby="test-id"
          class="g-checkbox-input"
          disabled=""
          type="checkbox"
        />
      </span>
    </label>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        Thanks for using antd. Have a nice day !
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-select g-select-outlined css-var-test-id g-select-css-var g-select-single g-select-show-arrow g-select-disabled"
    >
      <div
        class="g-select-content"
      >
        <div
          class="g-select-placeholder"
          style="visibility: visible;"
        />
        <input
          aria-autocomplete="list"
          aria-describedby="test-id"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          class="g-select-input"
          disabled=""
          id="test-id"
          readonly=""
          role="combobox"
          type="search"
          value=""
        />
      </div>
      <div
        class="g-select-suffix"
      >
        <span
          aria-label="down"
          class="gicon gicon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="g-select-dropdown g-slide-up-appear g-slide-up-appear-prepare g-slide-up css-var-test-id g-select-css-var g-select-dropdown-empty g-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1150;"
    >
      <div>
        <div
          class="g-select-item-empty"
          id="test-id_list"
          role="listbox"
        >
          <div
            class="css-var-test-id g-empty g-empty-normal g-empty-small"
          >
            <div
              class="g-empty-image"
            >
              <svg
                height="41"
                viewBox="0 0 64 41"
                width="64"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  No data
                </title>
                <g
                  fill="none"
                  fill-rule="evenodd"
                  transform="translate(0 1)"
                >
                  <ellipse
                    cx="32"
                    cy="33"
                    fill="#f5f5f5"
                    rx="32"
                    ry="7"
                  />
                  <g
                    fill-rule="nonzero"
                    stroke="#d9d9d9"
                  >
                    <path
                      d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                    />
                    <path
                      d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                      fill="#fafafa"
                    />
                  </g>
                </g>
              </svg>
            </div>
            <div
              class="g-empty-description"
            >
              No data
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        Thanks for using antd. Have a nice day !
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/tooltip/demo/disabled-children.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/placement.tsx extend context correctly 1`] = `
<div
  class="demo g-flex css-var-test-id g-flex-align-center g-flex-justify-center g-flex-vertical"
>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
    style="white-space: nowrap;"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        TL
      </span>
    </button>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-topLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        <span>
          prompt text
        </span>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        Top
      </span>
    </button>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        <span>
          prompt text
        </span>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        TR
      </span>
    </button>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        <span>
          prompt text
        </span>
      </div>
    </div>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-space-between"
    style="width: 432px;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          LT
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-leftTop"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          Left
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-left"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; top: 0px; right: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          LB
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-leftBottom"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
    </div>
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          RT
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-rightTop"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          Right
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          RB
        </span>
      </button>
      <div
        class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-rightBottom"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-tooltip-arrow"
          style="position: absolute;"
        >
          <span
            class="g-tooltip-arrow-content"
          />
        </div>
        <div
          class="g-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          <span>
            prompt text
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
    style="white-space: nowrap;"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        BL
      </span>
    </button>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        <span>
          prompt text
        </span>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-bottom"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        <span>
          prompt text
        </span>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        BR
      </span>
    </button>
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        <span>
          prompt text
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/tooltip/demo/placement.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/render-panel.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-tooltip-css-var css-var-test-id g-tooltip g-tooltip-pure g-tooltip-placement-top g-tooltip-pink"
  >
    <div
      class="g-tooltip-arrow"
    />
    <div
      class="g-tooltip-container"
      role="tooltip"
    >
      Hello, Pink Pure Panel!
    </div>
  </div>,
  <div
    class="g-tooltip-css-var css-var-test-id g-tooltip g-tooltip-pure g-tooltip-placement-top"
    style="--g-tooltip-arrow-background-color: #f50;"
  >
    <div
      class="g-tooltip-arrow"
    />
    <div
      class="g-tooltip-container"
      role="tooltip"
      style="background: rgb(255, 85, 0); --g-tooltip-overlay-color: #FFF;"
    >
      Hello, Customize Color Pure Panel!
    </div>
  </div>,
  <div
    class="g-tooltip-css-var css-var-test-id g-tooltip g-tooltip-pure g-tooltip-placement-bottomLeft"
  >
    <div
      class="g-tooltip-arrow"
    />
    <div
      class="g-tooltip-container"
      role="tooltip"
      style="width: 200px;"
    >
      Hello, Pure Panel!
    </div>
  </div>,
]
`;

exports[`renders components/tooltip/demo/render-panel.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/smooth-transition.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-small g-flex-vertical"
>
  <div
    class="g-flex css-var-test-id g-flex-justify-center g-flex-gap-small"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-justify-center g-flex-gap-small"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/tooltip/demo/smooth-transition.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-gap-medium"
>
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
    type="button"
  >
    <span>
      Object Style
    </span>
  </button>
  <div
    class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-tooltip-container acss-ven0qr"
      id="test-id"
      role="tooltip"
      style="border-radius: 12px; box-shadow: inset 0 0 8px #ccc;"
    >
      Object text
    </div>
  </div>
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Function Style
    </span>
  </button>
  <div
    class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-tooltip-container acss-ven0qr"
      id="test-id"
      role="tooltip"
      style="background-color: rgba(53, 71, 125, 0.8); padding: 12px; color: rgb(255, 255, 255); border-radius: 4px;"
    >
      Function text
    </div>
  </div>
</div>
`;

exports[`renders components/tooltip/demo/style-class.tsx extend context correctly 2`] = `[]`;

exports[`renders components/tooltip/demo/wrap-custom-component.tsx extend context correctly 1`] = `
Array [
  <span
    aria-describedby="test-id"
  >
    This text is inside a component with the necessary events exposed.
  </span>,
  <div
    class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-test-id g-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-tooltip-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-tooltip-arrow-content"
      />
    </div>
    <div
      class="g-tooltip-container"
      id="test-id"
      role="tooltip"
    >
      prompt text
    </div>
  </div>,
]
`;

exports[`renders components/tooltip/demo/wrap-custom-component.tsx extend context correctly 2`] = `[]`;
